# prism

./: AGENTS.md  README.md
prism-cli/: Cargo.toml
prism-cli/src/: config.rs  main.rs  output.rs  review.rs
prism-cli/src/ai/: analyzer.rs  mod.rs  prompts.rs  types.rs
prism-cli/src/github/: client.rs  mod.rs  repo.rs  types.rs
