[package]
name = "prism"
version = "0.1.0"
edition = "2024"
default-run = "prism"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
log = { version = "0.4.29", features = ["std"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "query"] }
rig-core = "0.32.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.23"
richrs = { version = "0.2.1", features = ["syntax", "markdown"] }
crossterm = "0.28.1"
